--- a/.github/workflows/app-with-ecs-ec2.yml
+++ b/.github/workflows/app-with-ecs-ec2.yml
@@ -1,8 +1,9 @@
 name: User source Deploy to Amazon ECR & ECS
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 env:
   AWS_REGION: ${{ secrets.REGION }}
   ECR_REPOSITORY: ${{ secrets.ECR_PRIVATE_REPOSITORY }}
